fix z-index issue with crossfade transition

--- a/built/chondric.css
+++ b/built/chondric.css
@@ -699,15 +699,18 @@ button.icon-only {
 .chondric-page.next.crossfade {
     pointer-events:none;
     display: block;
-    opacity: 1;
-    z-index: 1;
+    opacity: 0;
+    z-index: 11;
+}
+.chondric-page.active.crossfade {
+        -webkit-transition: opacity 0.3s ease-in-out;
 }
 .chondric-page.prev.crossfade {
     pointer-events:none;
     display: block;
-    opacity: 0;
+    opacity: 1;
     -webkit-transition: opacity 0.3s ease-in-out;
-    z-index: 11;
+    z-index: 9;
 }
 
 .chondric-page.next.slideleft {
